# voice-api

./: .env.example  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  index.html  pyproject.toml  report.json  run_tests.py  server.py
frontend/: index.html
node-api/: Dockerfile  package.json
node-api/src/: index.ts
python-service/: Dockerfile  main.py
readscore/: __init__.py  align.py  asr.py  cli.py  fluency.py  normalize.py  pronunciation.py  prosody.py  prosody_punct.py  punctuation_pauses.py  report.py
tests/: __init__.py  test_align.py  test_fluency.py  test_normalize.py  test_prosody_punct.py  test_report.py
